Finished work on adding and displaying partners in business canvas